--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - MONGO_URL=mongodb://mongo:27017/rocketchat
       - MONGO_OPLOG_URL=mongodb://mongo:27017/local
       - MAIL_URL=smtp://smtp.email
+      - ADMIN_USERNAME=admin
+      - ADMIN_PASS=testpass1
+      - ADMIN_EMAIL=admin@example.com
     #       - HTTP_PROXY=http://proxy.domain.com
     #       - HTTPS_PROXY=http://proxy.domain.com
     depends_on:
